Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18137

[Linux] Segfault with OpenSSL 1.1

XMLWordPrintable

      I get a segfault on Arch Linux with openssl-1.1.0.e-1 when trying to run the Qt Creator I got through the online installer.

      Output to terminal:

      $ ./qtcreator
      qt.network.ssl: QSslSocket: cannot resolve CRYPTO_num_locks
      qt.network.ssl: QSslSocket: cannot resolve CRYPTO_set_id_callback
      qt.network.ssl: QSslSocket: cannot resolve CRYPTO_set_locking_callback
      qt.network.ssl: QSslSocket: cannot resolve ERR_free_strings
      qt.network.ssl: QSslSocket: cannot resolve EVP_CIPHER_CTX_cleanup
      qt.network.ssl: QSslSocket: cannot resolve EVP_CIPHER_CTX_init
      qt.network.ssl: QSslSocket: cannot resolve sk_new_null
      qt.network.ssl: QSslSocket: cannot resolve sk_push
      qt.network.ssl: QSslSocket: cannot resolve sk_free
      qt.network.ssl: QSslSocket: cannot resolve sk_num
      qt.network.ssl: QSslSocket: cannot resolve sk_pop_free
      qt.network.ssl: QSslSocket: cannot resolve sk_value
      qt.network.ssl: QSslSocket: cannot resolve SSL_library_init
      qt.network.ssl: QSslSocket: cannot resolve SSL_load_error_strings
      qt.network.ssl: QSslSocket: cannot resolve SSL_get_ex_new_index
      qt.network.ssl: QSslSocket: cannot resolve SSLv2_client_method
      qt.network.ssl: QSslSocket: cannot resolve SSLv3_client_method
      qt.network.ssl: QSslSocket: cannot resolve SSLv23_client_method
      qt.network.ssl: QSslSocket: cannot resolve SSLv2_server_method
      qt.network.ssl: QSslSocket: cannot resolve SSLv3_server_method
      qt.network.ssl: QSslSocket: cannot resolve SSLv23_server_method
      qt.network.ssl: QSslSocket: cannot resolve X509_STORE_CTX_get_chain
      qt.network.ssl: QSslSocket: cannot resolve OPENSSL_add_all_algorithms_noconf
      qt.network.ssl: QSslSocket: cannot resolve OPENSSL_add_all_algorithms_conf
      qt.network.ssl: QSslSocket: cannot resolve SSLeay
      qt.network.ssl: QSslSocket: cannot resolve SSLeay_version
      qt.network.ssl: QSslSocket: cannot call unresolved function CRYPTO_num_locks
      qt.network.ssl: QSslSocket: cannot call unresolved function CRYPTO_set_id_callback
      qt.network.ssl: QSslSocket: cannot call unresolved function CRYPTO_set_locking_callback
      qt.network.ssl: QSslSocket: cannot call unresolved function SSL_library_init
      qt.network.ssl: QSslSocket: cannot call unresolved function SSLv23_client_method
      qt.network.ssl: QSslSocket: cannot call unresolved function sk_num
      zsh: segmentation fault (core dumped)  ./qtcreator
      

      Stack trace from core dump:

      Core was generated by `./qtcreator'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  0x00007f5a8c8b4d83 in ?? () from /opt/qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Network.so.5
      [Current thread is 1 (Thread 0x7f5a8e6fb180 (LWP 29585))]
      (gdb) bt
      #0  0x00007f5a8c8b4d83 in  () at /opt/qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Network.so.5
      #1  0x00007f5a8c8b6572 in  () at /opt/qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Network.so.5
      #2  0x00007f5a8c8b685d in  () at /opt/qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Network.so.5
      #3  0x00007f5a8c89eec4 in QSslCertificate::QSslCertificate(QIODevice*, QSsl::EncodingFormat) () at /opt/qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Network.so.5
      #4  0x00007f5a621aa8cd in LicenseManagerPrivate::LicenseManagerPrivate(LicenseManager*) () at /opt/qt/Tools/QtCreator/lib/qtcreator/plugins/libLicenseChecker.so
      #5  0x00007f5a621aac32 in LicenseManager::LicenseManager(QObject*) () at /opt/qt/Tools/QtCreator/lib/qtcreator/plugins/libLicenseChecker.so
      #6  0x00007f5a621baf00 in LicenseChecker::Internal::LicenseCheckerPrivate::LicenseCheckerPrivate() () at /opt/qt/Tools/QtCreator/lib/qtcreator/plugins/libLicenseChecker.so
      #7  0x00007f5a621bb29f in LicenseChecker::LicenseCheckerPlugin::LicenseCheckerPlugin() () at /opt/qt/Tools/QtCreator/lib/qtcreator/plugins/libLicenseChecker.so
      #8  0x00007f5a621c0a7b in qt_plugin_instance () at /opt/qt/Tools/QtCreator/lib/qtcreator/plugins/libLicenseChecker.so
      #9  0x00007f5a8c2e3953 in QPluginLoader::instance() () at /opt/qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5
      #10 0x00007f5a8e2f9948 in ExtensionSystem::Internal::PluginSpecPrivate::loadLibrary() () at /opt/qt/Tools/QtCreator/bin/../lib/qtcreator/libExtensionSystem.so.4
      #11 0x00007f5a8e2f33a5 in ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin(ExtensionSystem::PluginSpec*, ExtensionSystem::PluginSpec::State) () at /opt/qt/Tools/QtCreator/bin/../lib/qtcreator/libExtensionSystem.so.4
      #12 0x00007f5a8e2f3b21 in ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins() () at /opt/qt/Tools/QtCreator/bin/../lib/qtcreator/libExtensionSystem.so.4
      #13 0x000000000040982e in  ()
      #14 0x00007f5a8afa8511 in __libc_start_main () at /usr/lib/libc.so.6
      #15 0x000000000040a229 in  ()
      

      Everything works fine with OpenSSL 1.0 (e.g. with LD_LIBRARY_PATH=/usr/lib/openssl-1.0/ on Arch)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            juri.valdmann Jüri Valdmann (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes